# EVCRTMPPusher

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/chan/evcpusher/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  native-lib.cpp
app/src/main/cpp/librtmp/: CMakeLists.txt  rtmp.c
app/src/main/java/com/chan/evcpusher/: AudioChannel.kt  EvcPush.kt  MainActivity.kt  VideoChannel.kt
app/src/main/java/com/chan/evcpusher/util/: CameraHelper.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/chan/evcpusher/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
